--- a/app/views/static_pages/_footer.html.erb
+++ b/app/views/static_pages/_footer.html.erb
@@ -30,15 +30,49 @@
             <hr>
             <div class="row">
               <div class="col-md-6">
-                Все права защищены &copy; 2013 <a href="http://infotechcom.ru" target="blank">ООО "Инфоком-НН"</a>
+                Все права защищены &copy; 2014 <a href="http://infotechcom.ru" target="blank">ООО "Инфоком-НН"</a>
               </div>
               <div class="col-md-6">
+
                 <p class="social">
                   <a href="/"><span class="fa fa-facebook"></span></a>
                   <a href="/"><span class="fa fa-twitter"></span></a>
                   <a href="/"><span class="fa fa-youtube"></span></a>
                   <a href="/"><span class="fa fa-linkedin"></span></a>
                   <a href="/"><span class="fa fa-pinterest"></span></a>
+
+                                    <!-- Yandex.Metrika informer -->
+                    <a href="http://metrika.yandex.ru/stat/?id=24037993&amp;from=informer"
+                    target="_blank" rel="nofollow"><img src="//bs.yandex.ru/informer/24037993/3_0_3498DBFF_3498DBFF_1_pageviews"
+                    style="width:88px; height:31px; border:0;" alt="Яндекс.Метрика" title="Яндекс.Метрика: данные за сегодня (просмотры, визиты и уникальные посетители)" onclick="try{Ya.Metrika.informer({i:this,id:24037993,lang:'ru'});return false}catch(e){}"/></a>
+                    <!-- /Yandex.Metrika informer -->
+
+                    <!-- Yandex.Metrika counter -->
+                    <script type="text/javascript">
+                    (function (d, w, c) {
+                        (w[c] = w[c] || []).push(function() {
+                            try {
+                                w.yaCounter24037993 = new Ya.Metrika({id:24037993,
+                                        clickmap:true,
+                                        trackLinks:true,
+                                        accurateTrackBounce:true});
+                            } catch(e) { }
+                        });
+
+                        var n = d.getElementsByTagName("script")[0],
+                            s = d.createElement("script"),
+                            f = function () { n.parentNode.insertBefore(s, n); };
+                        s.type = "text/javascript";
+                        s.async = true;
+                        s.src = (d.location.protocol == "https:" ? "https:" : "http:") + "//mc.yandex.ru/metrika/watch.js";
+
+                        if (w.opera == "[object Opera]") {
+                            d.addEventListener("DOMContentLoaded", f, false);
+                        } else { f(); }
+                    })(document, window, "yandex_metrika_callbacks");
+                    </script>
+                    <noscript><div><img src="//mc.yandex.ru/watch/24037993" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+                    <!-- /Yandex.Metrika counter -->
                 </p>
               </div>
             </div>
