--- a/app/views/static_pages/clients.html.erb
+++ b/app/views/static_pages/clients.html.erb
@@ -5,7 +5,7 @@
   <div class="container">
     <ol class="breadcrumb">
       <li><a href="/index.html">Главная</a></li>
-      <li class="active">О бирже</li>
+      <li class="active">Для клиентов</li>
     </ol>
   </div>
 </div>
@@ -17,8 +17,11 @@
 	  <div class="col-md-12">
 		<div class="content">
             <h1>Услуги для клиентов</h1>
-            <p>Текстс страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы.</p>
-            <p>Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы</p>
+            <p><img src="/img/content.jpg" align="right" alt="Написание контента">Всем желающим приобрести контент мы предлагаем выгодные цены, удобный интерфейс и профессиональное исполнение заказов.</p>
+            <p>Архитекрута нашего сервиса и ряд инновационных решений позволили нам шагнуть на ступень выше в вопросах качества предоставления услуг копирайтинга. Помимо удобного интерфейса и профессиональных дизайнерских решений, с которыми вы уже наверняка успели познакомиться на нашей главной странице, мы предлагаем вам воспользоваться передовыми технологиями. Наш сайт написан на Ruby on Rails и перенял множество функциональных особенностей передовых бирж копирайтинга в России и за рубежом.</p>
+            <p>Приятным нововведением для наших клиентов станет использование систем проверки на плагиат в автоматическом режиме. На нашем сервисе у вас не будет необходимости тратить дополнительные средства на проверку заказанной вами статьи. подобный подход кажется странным. Ведь при покупке контента вам требуется именно оригинальность. Просто скопировать текст из интернета можно самостоятельно, зачем платить за это несколько долларов "доброму копирайтеру". Наша биржа текстов проводит проверку всех материалов, будь то заказанная статьи или готовый текст из каталога, автоматически.</p>
+            <p>Ещё одной важной особенностью сервиса является наличие возможности в режиме онлайн следить за выполнением вашего заказа. Рядом с заказанной вами статьёй, после начала работы над ней копирайтером, имеется процент выполнения. Более того, вы имеется возможность в процессе написания материала связаться с автором и внести необходимые коррективы не дожидаясь сдачи статьи. Это позволяет оперативно взаимодействовать с копирайтером и получить работу более высокого качества.</p>
+            <p>После сдачи статьи, вы, как заказчик можете принять работу, либо отправить её на корректировку. Система контроля платежей гарантирует, что пока работа не будет выполенна с удовлетворяющим вас качеством, средства не будут зачисленны на счёт исполнителя.</p>
 
          </div>
 	  </div>
