--- a/app/views/static_pages/copyrighters.html.erb
+++ b/app/views/static_pages/copyrighters.html.erb
@@ -5,7 +5,7 @@
   <div class="container">
     <ol class="breadcrumb">
       <li><a href="/index.html">Главная</a></li>
-      <li class="active">О бирже</li>
+      <li class="active">Для копирайтеров</li>
     </ol>
   </div>
 </div>
@@ -17,9 +17,18 @@
 	  <div class="col-md-12">
 		<div class="content">
             <h1>Услуги для копирайтеров</h1>
-            <p>Текстс страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы.</p>
-            <p>Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы</p>
-
+            <p align="justify"><img src="/img/rost.jpg" align="left" alt="Копирайтинг">Сервис "Биржа текстов" предлагаем вам выгодные условия сотрудничества и позволяет получить дополнительный источник доходов. Стабильный поток заказов обеспечивает постоянную прибыль.</p>
+            <p align="justify">Отличительной особенностью нашего сервиса является фиксированная цена за статью. Цена определяется исходя из объёма материала. Исходя из объёма существует 4 ценовых категории:</p>
+            <ul>
+              <li><strong>До 500 знаков - 99 рублей</strong>*</li>
+              <li><strong>До 1200 знаков - 199 рублей</strong>*</li>
+              <li><strong>До 2300 знаков - 299 рублей</strong>*</li>
+              <li><strong>До 4400 знаков - 399 рублей</strong>*</li>
+            * За услуги посредничества биржа берёт 10% от стоимости статьи.
+            </ul>
+            <p align="justify"><img src="/img/money.jpg" align="right" alt="Стабильный доход" style="margin-left: 10px;">Кроме того, проверка на плагиат, осуществляемая на похожих сервисах только по требованию заказчика за дополнительные деньги, у нас происходит автоматически за счёт средств биржи. При наличии плагиата в контенте более 15% статья не будет принята к публикации. Это справедливо как для контента, написанного на заказ, так и для готовый статей, выставленных на продажу.</p>
+            <p align="justify">У копирайтеров на нашем портале есть возможность во время написания статьи проконсультироваться с заказчиком. Удобная форма комментариев даёт возможность обмениваться репликами с клиентом даже на промужеточном этапе написания заказа.</p>
+            <p align="justify">Важным аргументом для копирайтера при выборе площадки является наличие удобной возможности вывода средств. В нашем сервисе вывод заработанных вами денег возможен на все популярные электронные кошельки (Яндекс деньги, Webmoney, PayPal и т.д.), а также на счета в банках и пластиковые карточки. Ручная проверка транзакций исключает ошибки при выводе средств. Нормированным сроком вывода денег на нашем портале в будние дни является 3 часа.</p>
          </div>
 	  </div>
 	</div>
