--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,6 +1,7 @@
 <%= render "/shared/slider" %>
 
     <!-- Info thumbnails - START -->
+  <% if !current_user %>
     <section>
       <div class="container">
         <div class="row">
@@ -28,6 +29,7 @@
         </div>
       </div>
     </section>
+  <% end %>
     <!-- Info thumbnails - END -->
 
 
@@ -105,7 +107,7 @@
               </div>
               <div class="caption bordered background-white">
                 <h3>Готовые статьи</h3>
-                <p class="description color-text">Любой копирайтер, зарегистрировавшись на нашем сайте может незамедлительно выставить написанную им оригинальную статью на продажу. Вовсе не обязательно ждать, пока появится конкретный заказ. Достаточно разместить оригинальный контент к нашем каталоге на продажу.</p>
+                <p class="description color-text">Любой копирайтер, зарегистрировавшись на нашем сайте, может незамедлительно выставить написанную им оригинальную статью на продажу. Вовсе не обязательно ждать, пока появится конкретный заказ. Достаточно разместить оригинальный контент к нашем каталоге на продажу.</p>
                 <p class="buttons"><a href="#" class="btn btn-lead">Читать полностью</a></p>
               </div>
             </div>
