--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,7 +4,7 @@
 <div class="background-clouds breadcrumbs-container">
   <div class="container">
     <ol class="breadcrumb">
-      <li><%= link_to "Новые статьи без заказа", "/copyrighters/newpost.html" %>
+      <li><%= link_to "Заказы в работе", "/copyrighters/work.html" %>
       <li class="active"><%= @post.name %></li>
     </ol>
   </div>
@@ -18,6 +18,7 @@
       <div class="col-md-9">
         <div class="row">
 <div class="col-md-12">
+
   <h1>Текст статьи</h1>
   <div class="thumbnail info-thumbnail padding1 background-clouds color-black">
     <div class="caption background-white">
@@ -29,6 +30,7 @@
             <th>Автор</th>
             <th>Стоимость</th>
             <th>Дата написания</th>
+            <th>Оригинальность</th>
           </tr>
         </thead>
         <tbody>
@@ -37,6 +39,7 @@
             <td><%= link_to @post.user.username, @post.user %></td>
             <td><%= @post.sale %> руб.</td>
             <td><%= Russian::strftime(@post.updated_at, "%d %B %Y %H:%M") %></td>
+            <td><%= @post.origin %>%</td>
           </tr>
         </tbody>
       </table>
