--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -16,20 +16,20 @@
 	<div class="row">
 	  <div class="col-md-12">
         <div class="content">
-              <h1>FAQ</h1>
-              <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.</p>
+              <h1>Помощь</h1>
+              <p>Сервис "Биржа текстов" является сложной технической платформой. Сервис подобного технического уровня требует знаний в процессе эксплуатации. Однако в процессе разработки для облегчения эксплуатации портала была проведена работа с привлечением фокус-группы. Надеемся, что решения, используемые нами будут вам интуитивно понятны и не потребуют много времени для "привыкания". </p>
               <div class="panel-group faq" id="accordion">
                 <div class="panel panel-default">
                   <div class="panel-heading">
                     <h4 class="panel-title">
                       <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
-                         Collapsible Group Item?
+                         Для чего нужна регистрация?
                       </a>
                     </h4>
                   </div>
                   <div id="collapseOne" class="panel-collapse collapse in">
                     <div class="panel-body background-clouds">
-                      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                      Все пользователи нашего сервиса подразделяются на три группы - клиенты, копирайтеры и модераторы. У каждой из групп имеется свой функционал. Регистрация пользователей необходима для определения "статуса" пользователя и предосталвения ему специализированного доступа к сервису.
                     </div>
                   </div>
                 </div>
@@ -37,13 +37,13 @@
                   <div class="panel-heading">
                     <h4 class="panel-title">
                       <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
-                        Collapsible Group Item?
+                        Какой функционал имеет копирайтер?
                       </a>
                     </h4>
                   </div>
                   <div id="collapseTwo" class="panel-collapse collapse">
                     <div class="panel-body background-clouds">
-                      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                      Только пользователь со статусом "копирайтер" имеет возможность брать на исполнение заказы клиентов. Также только данный вид пользователей имеет возможность публиковать готовые статьи в каталоге на продажу. Кроме того, только копирайтер имеет возможност вывести средства из системы.
                     </div>
                   </div>
                 </div>
@@ -51,13 +51,42 @@
                   <div class="panel-heading">
                     <h4 class="panel-title">
                       <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
-                        Collapsible Group Item?
+                       Что может делать клиент?
                       </a>
                     </h4>
                   </div>
                   <div id="collapseThree" class="panel-collapse collapse">
                     <div class="panel-body background-clouds">
-                      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                      Клиент имеет возможность создавать заказы для копирайтеров на написание статей. Пользователь при помощи системы Робокасса может вносить средства на счёт в сервисе.
+                    </div>
+                  </div>
+                </div>
+
+                <div class="panel panel-default">
+                  <div class="panel-heading">
+                    <h4 class="panel-title">
+                      <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
+                       Я зарегистрировался в качестве клиента (копирайтера), могу ли я сменить статус?
+                      </a>
+                    </h4>
+                  </div>
+                  <div id="collapseThree" class="panel-collapse collapse">
+                    <div class="panel-body background-clouds">
+                      Да, в личном кабинете вы имеете возможность изменить ваш статус. При этом информация о ваших заказах, статьях, сообщениях, кол-ве денежных средств на счёте сохранится.
+                    </div>
+                  </div>
+                </div>
+                <div class="panel panel-default">
+                  <div class="panel-heading">
+                    <h4 class="panel-title">
+                      <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
+                       Как осуществляется проверка на плагиат?
+                      </a>
+                    </h4>
+                  </div>
+                  <div id="collapseThree" class="panel-collapse collapse">
+                    <div class="panel-body background-clouds">
+                      Наш сервис сотрудничает с крупнейшей российской системой проверки оригинальности http://www.content-watch.ru. При размещении статьи на продажу, либо при сдачи контента заказчику на проверку, материал автоматически проходит проверку на плагиат. При превышении лимита "заимствований" 15% статья будет отправлена в брак.
                     </div>
                   </div>
                 </div>
