--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -86,7 +86,7 @@
 
                         <a class="btn btn-link" href="#">
                           <i class="icon-globe bigger-125 blue"></i>
-                          www.alexdoe.com
+                          www.articlesale.ru
                         </a>
 
                       </div>
@@ -109,19 +109,6 @@
 
                     </div>
 
-                    <div class="hr hr12 dotted"></div>
-
-                    <div class="clearfix">
-                      <div class="grid2">
-                        <span class="bigger-175 blue">25</span>
-
-                        <br />
-                        Рейтинг
-                      </div>
-
-                    </div>
-
-                    <div class="hr hr12 dotted"></div>
                   </div>
 
                   <div class="col-md-9">
