--- a/app/views/shared/_rightcolumn.html.erb
+++ b/app/views/shared/_rightcolumn.html.erb
@@ -1,19 +1,14 @@
 
            <div class="col-md-3">
 
-            <h3>Archives</h3>
+            <h3>Копирайтерам</h3>
             <ul class="side-list">
-              <li><a href="#">August 2013</a></li>
-              <li><a href="#">September 2013</a></li>
-              <li><a href="#">October 2013</a></li>
-              <li><a href="#">November 2013</a></li>
-              <li><a href="#">December 2013</a></li>
+              <p>На нашем сервисе <strong class="blue">копирайтер получает возможность</strong> дополнительного <strong class="blue">стабильного заработка</strong>. Давайте посчитаем возможный финансовый эффект. В день вполне реально написать 5 статей по 1 листу. 1 печатнй лист - это порядка 2000 знаков, или 299 рублей, на "Бирже текстов". 10% сервис берёт за свои услуги. Получаем 299 - 10% * 5 = <strong class="yellow">1 345 рублей в день</strong>.</p>
+              <li><a href="/users/sign_in?status=copy">Регистрация</a></li>
             </ul>
-            <h3>Category</h3>
+            <h3>Клиентам</h3>
             <ul class="side-list">
-              <li><a href="#">Webdesign</a></li>
-              <li><a href="#">Programming</a></li>
-              <li><a href="#">Freebies</a></li>
-              <li><a href="#">Others</a></li>
+              <p>Любой заказчик хочет получить <strong class="blue">качественный продукт</strong>. Именно за это он платит свои деньги. В случае с покупкой контента качество <strong class="blue">определяется уровнем копирайтеров и оригинальностью текста</strong>. Скупой платит дважды, кажество не может стоить дёшево. Лучше заплатить на несколько центов больше, чем получить в замен текст, переписанный с сайта ваших конкурентов.</p>
+              <li><a href="/users/sign_in?status=client">Регистрация</a></li>
             </ul>
           </div>
