--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -23,7 +23,7 @@
                   <div class="panel-heading">
                     <h4 class="panel-title">
                       <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
-                         Для чего нужна регистрация?
+                         1. Для чего нужна регистрация?
                       </a>
                     </h4>
                   </div>
@@ -37,7 +37,7 @@
                   <div class="panel-heading">
                     <h4 class="panel-title">
                       <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
-                        Какой функционал имеет копирайтер?
+                        2. Какой функционал имеет копирайтер?
                       </a>
                     </h4>
                   </div>
@@ -51,7 +51,7 @@
                   <div class="panel-heading">
                     <h4 class="panel-title">
                       <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
-                       Что может делать клиент?
+                       3. Что может делать клиент?
                       </a>
                     </h4>
                   </div>
@@ -65,12 +65,12 @@
                 <div class="panel panel-default">
                   <div class="panel-heading">
                     <h4 class="panel-title">
-                      <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
-                       Я зарегистрировался в качестве клиента (копирайтера), могу ли я сменить статус?
+                      <a data-toggle="collapse" data-parent="#accordion" href="#collapseFour">
+                       4. Я зарегистрировался в качестве клиента (копирайтера), могу ли я сменить статус?
                       </a>
                     </h4>
                   </div>
-                  <div id="collapseThree" class="panel-collapse collapse">
+                  <div id="collapseFour" class="panel-collapse collapse">
                     <div class="panel-body background-clouds">
                       Да, в личном кабинете вы имеете возможность изменить ваш статус. При этом информация о ваших заказах, статьях, сообщениях, кол-ве денежных средств на счёте сохранится.
                     </div>
@@ -79,12 +79,12 @@
                 <div class="panel panel-default">
                   <div class="panel-heading">
                     <h4 class="panel-title">
-                      <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
-                       Как осуществляется проверка на плагиат?
+                      <a data-toggle="collapse" data-parent="#accordion" href="#collapseFive">
+                       5. Как осуществляется проверка на плагиат?
                       </a>
                     </h4>
                   </div>
-                  <div id="collapseThree" class="panel-collapse collapse">
+                  <div id="collapseFive" class="panel-collapse collapse">
                     <div class="panel-body background-clouds">
                       Наш сервис сотрудничает с крупнейшей российской системой проверки оригинальности http://www.content-watch.ru. При размещении статьи на продажу, либо при сдачи контента заказчику на проверку, материал автоматически проходит проверку на плагиат. При превышении лимита "заимствований" 15% статья будет отправлена в брак.
                     </div>
