--- a/app/views/shared/_newquestion.html.erb
+++ b/app/views/shared/_newquestion.html.erb
@@ -1,6 +1,6 @@
           <div class="col-md-5">
             <h3>Задать вопрос</h3>
-            <%= form_for Question.new, :url => {:controller => "admins", :action => "new_question"}, :class => "form-horizontal", :role => "form" do |f| %>
+            <%= form_for Question.new, :url => {:controller => "/admins", :action => "new_question"}, :class => "form-horizontal", :role => "form" do |f| %>
               <div class="form-group">
                 <label for="inputName1" class="col-lg-3 control-label">Имя</label>
                 <div class="col-lg-9">
