--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -6,7 +6,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-6 col-md-6">
-            <a class="info-thumbnail-link" href="/users/sign_in">
+            <a class="info-thumbnail-link" href="/users/sign_in?status=copy">
             <div class="thumbnail info-thumbnail background-carrot">
               <div class="caption">
                 <h3><span class="fa fa-flag color-lead"></span> Для копирайтеров</h3>
@@ -16,7 +16,7 @@
             </a>
           </div>
           <div class="col-sm-6 col-md-6">
-            <a class="info-thumbnail-link" href="/users/sign_in">
+            <a class="info-thumbnail-link" href="/users/sign_in?status=client">
             <div class="thumbnail info-thumbnail background-lead-light">
               <div class="caption">
                 <h3><span class="fa fa-group"></span> Для заказчиков</h3>
