Mistake with correct

--- a/app/views/clients/complite.html.erb
+++ b/app/views/clients/complite.html.erb
@@ -39,7 +39,7 @@
             <td><%= order.id %></td>
             <td><%= link_to order.name, project_order_url(order.project, order) %></td>
             <td><%= link_to order.project.name, order.project %></td>
-            <td><%= price_is(@order.amount) %> руб.</td>
+            <td><%= price_is(order.amount) %> руб.</td>
             <td><%= link_to order.post.user.username, order.post.user %></td>
             <td><%= order.complite? %></td>
             <td><%= order.post.origin %>%</td>
