--- a/app/views/projects/order/_copy.html.erb
+++ b/app/views/projects/order/_copy.html.erb
@@ -44,59 +44,61 @@
 </div>
 <% end %>
 
-<% if @post.user == current_user && (@post.order.status == 1 || @post.order.status == 2) %>
-      <div class="col-md-12">
-        <h1>
-          <% if !@post.text.nil? %>
-            <%= "Редактировать статью" %>
-          <% else %>
-            <%= "Написать статью" %>
-          <% end %>
-          </h1>
-        <div class="thumbnail info-thumbnail padding1 background-clouds color-black">
-          <div class="caption background-white">
-            <%= form_for @post, :url => {:controller => "projects", :action => "edit_post"} do |f| %>
-              <%= f.hidden_field :id, :value => @post.id %>
-              <%= f.hidden_field :order_id, :value => @order.id %>
-              <div class="form-group">
-                <%= f.text_field :name, :size => "120", :placeholder => "Название статьи" %>
-              </div>
-              <div class="form-group">
-                <%= f.text_area :text, :size => "120x8", :placeholder => "Текст статьи" %>
-              </div>
-              <%= f.submit :value => "Сохранить", :class => "btn btn-primary" %>
+<% if @post %>
+  <% if @post.user == current_user && (@post.order.status == 1 || @post.order.status == 2) %>
+        <div class="col-md-12">
+          <h1>
+            <% if !@post.text.nil? %>
+              <%= "Редактировать статью" %>
+            <% else %>
+              <%= "Написать статью" %>
             <% end %>
-          </div>
-
-          <div class="caption background-white">
-            <blockquote>
-              <p>Текст можно отправить заказчику только после сохранения статьи и только в том случае, если размер статьи соответствует заказанному количеству знаков.</p>
-              <small>Администратор <cite title="Source Title">Биржи текстов</cite></small>
-            </blockquote>
-          </div>
-
-          <% if !@post.text.nil? && @post.text.gsub(/\s+/, '').length >= @post.order.amount %>
+            </h1>
+          <div class="thumbnail info-thumbnail padding1 background-clouds color-black">
             <div class="caption background-white">
-              <%= form_for @post, :url => {:controller => "projects", :action => "edit_post_status"} do |f| %>
-                <%= f.submit :value => "Отправить заказчику", :class => "btn btn-primary" %>
+              <%= form_for @post, :url => {:controller => "projects", :action => "edit_post"} do |f| %>
+                <%= f.hidden_field :id, :value => @post.id %>
+                <%= f.hidden_field :order_id, :value => @order.id %>
+                <div class="form-group">
+                  <%= f.text_field :name, :size => "120", :placeholder => "Название статьи" %>
+                </div>
+                <div class="form-group">
+                  <%= f.text_area :text, :size => "120x8", :placeholder => "Текст статьи" %>
+                </div>
+                <%= f.submit :value => "Сохранить", :class => "btn btn-primary" %>
               <% end %>
             </div>
-         
-          <% else %>
+
             <div class="caption background-white">
-              <strong>Размер текста меньше необходимого. Вы пока не можете отправить статью заказчику.</strong>
+              <blockquote>
+                <p>Текст можно отправить заказчику только после сохранения статьи и только в том случае, если размер статьи соответствует заказанному количеству знаков.</p>
+                <small>Администратор <cite title="Source Title">Биржи текстов</cite></small>
+              </blockquote>
             </div>
-          <% end %>
+
+            <% if !@post.text.nil? && @post.text.gsub(/\s+/, '').length >= @post.order.amount %>
+              <div class="caption background-white">
+                <%= form_for @post, :url => {:controller => "projects", :action => "edit_post_status"} do |f| %>
+                  <%= f.submit :value => "Отправить заказчику", :class => "btn btn-primary" %>
+                <% end %>
+              </div>
+           
+            <% else %>
+              <div class="caption background-white">
+                <strong>Размер текста меньше необходимого. Вы пока не можете отправить статью заказчику.</strong>
+              </div>
+            <% end %>
+          </div>
+        </div>
+
+
+  <% else  @post.order.status == 4 || @post.order.status == 3 %>
+    <div class="col-md-12">
+      <div class="thumbnail info-thumbnail padding1 background-clouds color-black">
+        <div class="caption background-white">
+          <strong>Статья отправленна заказчику.</strong>
         </div>
       </div>
-
-
-<% else  @post.order.status == 4 || @post.order.status == 3 %>
-  <div class="col-md-12">
-    <div class="thumbnail info-thumbnail padding1 background-clouds color-black">
-      <div class="caption background-white">
-        <strong>Статья отправленна заказчику.</strong>
-      </div>
     </div>
-  </div>
+  <% end %>
 <% end %>
