--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -18,7 +18,7 @@
       <div class="col-md-9">
         <div class="row">
 <div class="col-md-12">
-
+<p id="notice"><%= notice %></p>
   <h1>Текст статьи</h1>
   <div class="thumbnail info-thumbnail padding1 background-clouds color-black">
     <div class="caption background-white">
@@ -68,7 +68,7 @@
                 <%= f.text_field :name, :size => "120", :placeholder => "Название статьи" %>
               </div>
               <div class="form-group">
-                <%= f.text_area :text, :size => "120x8", :placeholder => "Текст статьи" %>
+                <%= f.cktext_area :text, :size => "120x8", :placeholder => "Текст статьи" %>
               </div>
               <%= f.submit :value => "Сохранить", :class => "btn btn-primary" %>
             <% end %>
